Kleopatra: Wrong User IDs selected when certifying specific User IDs and other User IDs have tags
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Sep 1 2023, 2:37 PM
Tags

Description

Prerequisites:

  • An OpenPGP key A with user IDs A1 and A2
  • Another OpenPGP key C (used as certification certificate)
  • "Show tags attached to certificates" is enabled

How to reproduce:

  1. Certify A1 with tag "tagA1" with certification certificate C.
  2. Open details of A.
  3. Select user ID A2.
  4. Click "Certify User IDs".

Expected:
Certify dialog opens and user ID A2 is checked.

Actual:
Certify dialog opens and user ID A1 is checked (and the (hidden) Tags field is prefilled with "tagA1").

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Sep 1 2023, 3:51 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Fixed. Backport? (Depends on first preparations for bulk certification and is probably not really relevant for VSD.)

ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

works. In current VSD-testing-Beta.